# ports-agent

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/ports-agent/: Cargo.toml
crates/ports-agent/src/: lib.rs  main.rs
crates/ports-agent/src/acme/: mod.rs
crates/ports-agent/src/backup/: mod.rs
crates/ports-agent/src/core/: keys.rs  logging.rs  mod.rs  system.rs  telemetry.rs
crates/ports-agent/src/coredns/: mod.rs
crates/ports-agent/src/db/: mod.rs
crates/ports-agent/src/dhcp/: mod.rs
crates/ports-agent/src/discovery/: mod.rs
crates/ports-agent/src/firewall/: mod.rs  nftables.rs
crates/ports-agent/src/haproxy/: mod.rs
crates/ports-agent/src/router/: mod.rs
crates/ports-agent/src/tailscale/: mod.rs
crates/ports-agent/src/traffic/: mod.rs
crates/ports-agent/src/transport/: mod.rs  reverse.rs  stdio.rs
crates/ports-common/: Cargo.toml
crates/ports-common/src/: config.rs  lib.rs  protocol.rs
crates/portsctl/: Cargo.toml
crates/portsctl/src/: main.rs
crates/portsctl/src/commands/: mod.rs
crates/portsctl/src/core/: client.rs  mod.rs
packaging/: install-agent.sh  nfpm.yaml
packaging/config/: agent.example.yaml
packaging/pacman/: PKGBUILD  ports-agent.install
packaging/rpm/: ports-agent.spec
packaging/scripts/: postinstall.sh  postremove.sh  preremove.sh
packaging/systemd/: ports-agent.service
