[workspace]
resolver = "2"
members = ["crates/ports-common", "crates/ports-agent", "crates/portsctl"]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/TheiVy-Studio/ports-agent"

[workspace.dependencies]
ports-common = { path = "crates/ports-common" }
ports-agent = { path = "crates/ports-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

[profile.release]
strip = true
lto = "thin"
