[package]
name = "ports-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ports_agent"
path = "src/lib.rs"

[[bin]]
name = "ports-agent"
path = "src/main.rs"

[dependencies]
ports-common.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
base64.workspace = true
