[package]
name = "portsctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "portsctl"
path = "src/main.rs"

[dependencies]
ports-common.workspace = true
ports-agent.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
